# memomap-learning

./: .gitignore  API_DOCS.md  FLOWS.md  README.md  REVAMP_PLAN.md  STRUCTURE.md  pyproject.toml  requirements.txt  run.py
alembic/: env.py
backend/: .gitignore  README.md  main.py  pyproject.toml  requirements-delf-local.txt  requirements-delf-pdf.txt  requirements.txt  run.py
backend/alembic/: env.py
backend/alembic/versions/: 0a427e885726_add_topic_to_coce_exercises.py  1ad1e6763aa6_composite_index_level_topic.py  2f6c8f1d9a0b_add_delf_variant_listing_index.py  3c7e9a1f2b4d_add_user_exercise_progress.py  6b559250d4d2_add_coce_exercises_table.py  7d4c9b2a1e6f_drop_sunset_legacy_sql_tables.py  9df4f9e4eab4_add_foreign_keys_and_constraints.py  a3f7c1d2e4b5_add_delf_test_papers_table.py  b902d9d86fb5_learning_initial_schema.py
backend/api/: index.py  pyproject.toml  requirements.txt
backend/scripts/: backfill_exercise_topics.py  backfill_vocab_sql_to_mongo.py  import_b2_workbook_regular.py  import_b2_workbook_regular_ce.py  migrate_coce_exercises.py
backend/scripts/delf_mcp/: README.md  __init__.py  delete_service.py  draft_service.py  get_service.py  list_service.py  naming_service.py  publish_service.py  server.py  update_service.py  validation.py
backend/src/: __init__.py  config.py  extensions.py
backend/src/api/: __init__.py  decorators.py  errors.py  schemas.py
backend/src/domain/: __init__.py  community_feedback.py  controllers.py  db_queries.py  errors.py  vocabulary_compat.py  vocabulary_mongo.py
backend/src/infra/: __init__.py  mongo.py
(+425 files in other folders)
