[project]
name = "memomap-learning-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "azure-cognitiveservices-speech>=1.41.1",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-limiter>=3.13",
    "google-genai>=1.49.0",
    "itsdangerous>=2.2.0",
    "loguru>=0.7.3",
    "prometheus-client>=0.23.0",
    "pycountry>=24.6.1",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "redis>=7.0.1",
    "requests>=2.32.5",
]
